# RainMeter-Manager

./: .gitattributes  .gitignore  .gitleaks.toml  AUTHORS.md  CMakeLists.txt  CMakeLists.txt.new  CONTRIBUTING.md  CURRENT_STATE_ASSESSMENT.md  Developer  Directory.Build.props  ENHANCEMENTS_SUMMARY.md  ENTERPRISE_PROGRESS_REPORT.md  LICENSE  LICENSE-BETA.txt  LICENSE.txt  NOTICE  PROJECT_DESCRIPTION.md  README.md  RELEASE_COMPLIANCE_CHECKLIST.md  RENDERCORE_IMPLEMENTATION_STATUS_UPDATE.md  RENDERCORE_IMPLEMENTATION_SUMMARY.md  RainmeterManager.sln  RainmeterManager.vcxproj  STUBS_README.md  WARP.md  audit.md  build_direct.ps1  code_fixes.diff  dependencies.json  main.cpp.diff  quick_build.ps1  raw_trace.txt  run_full_build.bat  security.cpp.diff  temp_build.bat  test_batch.bat  test_compile.bat  test_compile_ipc.bat  test_simple.bat
.github/: CODEOWNERS
changes/2025-09-03_Initial-Assessment/: CHANGELOG.md  assessment.md  backlog.md  notes.md
changes/2025-09-10_Build-and-IPC-Prep/: CHANGELOG.md
changes/2025-10-18_Infrastructure-and-AXIOM-v2/: CHANGELOG.md
changes/backups/: README.md
changes/build_reports/: BUILD_ERRORS_20250909_235452Z.txt  BUILD_ERRORS_20250909_235528Z.txt  BUILD_ERRORS_20250910_001900Z.txt  CMAKE_BUILD_20250910_002332Z.txt  DOTNET_BUILD_20250909_215529.txt  DOTNET_BUILD_20250909_215956_2.txt  DOTNET_BUILD_20250909_223420_3.txt  DOTNET_BUILD_20250910_051900.txt  MSBUILD_BUILD_20250910_002521Z.txt  MSBUILD_BUILD_20250910_014544Z.txt  MSBUILD_BUILD_20250910_015231Z.txt  MSBUILD_BUILD_20250910_015347Z.txt  README.md
changes/plans/: repair_plan_20250910.md
cmake/: FindSkiaSharp.cmake  version.h.in
config/: api_providers.json  rainmeterui_categories.json  rainmeterui_categories.md  rainmeterui_urls.txt  render_config.json
design_docs/: bootstrap.md
docs/: CODE_SIGNING_PROCESS.md  LICENSE_POLICY.md  RAINMETER_WIDGET_CATALOG.md  README.md  SANDBOXING_PHILOSOPHY.md  SECURITY_AUDIT.md  WIDGET_TEMPLATES_IMPLEMENTATION_GUIDE.md
docs/api/: DEVELOPER_API.md
docs/guides/: INTEGRATION_GUIDE.md  LEGAL_AND_CONFIG.md
docs/project/: COMMUNITY_FEEDBACK_INTEGRATION_SUMMARY.md  RAINMETER_CONTENT_SUMMARY.md
dumps/: RainmeterManager_20250910_230419.dmp  RainmeterManager_20250910_230705.dmp  RainmeterManager_20250910_231151.dmp  RainmeterManager_20250910_231426.dmp  RainmeterManager_20250911_002023.dmp  RainmeterManager_20250911_003633.dmp  RainmeterManager_20250911_005011.dmp  RainmeterManager_20250911_005306.dmp  RainmeterManager_20250911_005423.dmp  RainmeterManager_20250911_005608.dmp  RainmeterManager_20250911_010159.dmp  RainmeterManager_20250911_010423.dmp  RainmeterManager_20250911_010602.dmp  RainmeterManager_20250911_012707.dmp  RainmeterManager_20250911_013243.dmp  RainmeterManager_20250911_015422.dmp  RainmeterManager_20250911_015707.dmp  RainmeterManager_20250911_020039.dmp  RainmeterManager_20250911_060237.dmp  RainmeterManager_20250911_060403.dmp  RainmeterManager_20250911_063045.dmp  RainmeterManager_20250911_063932.dmp
examples/: IllustroClockTest.cs  IllustroClockTest.csproj  RenderCoreTestApp.cs  SimpleClockWidget.cs
installer/: RainmeterManager.nsi  installer.nsi.txt  rainmetermanager_installer.nsi
installer/includes/: Prereqs.nsh
renderprocess/: Program.cs  RenderProcess.csproj  app.manifest  packages.lock.json
renderprocess/Backends/: Direct3DRenderer.cs  SkiaSharpRenderer.cs  WebViewRenderer.cs
renderprocess/Communication/: IPCMessageHandler.cs
renderprocess/Content/: APIContentLoader.cs  API_KEY_GUIDE.md  FileContentLoader.cs  MediaContentLoader.cs  README.md  WebContentLoader.cs  api_environment_loaders.cs  configure_loaders.ps1  deploy_loaders.ps1  loader_deployment_complete (1).txt  setup_api_keys.ps1  verify_loaders.ps1
renderprocess/Interfaces/: IRenderBackend.cs  RenderDataStructures.cs
renderprocess/Runtime/: DashboardService.cs  MonitorManager.cs  PerformanceMonitor.cs  ProcessService.cs  RenderManager.cs  TrustedSitesConfig.cs
report/: build_system.md  file_tree.txt  issues.md  loc.txt
report/20250809-201213/inventory/: env.sh  rev.txt  (+2 more)
resources/: resource.rc
resources/manifests/: manifest.xml
samples/rainmeter_skins/: README.md
scripts/: buildscript.bat  buildscript_fixed.bat  ci_build.bat  collect_build_errors.ps1  enterprise_build.bat  verify_dependencies.ps1
scripts/ci/: PublishRenderProcess.ps1
scripts/scraper/: AXIOM.py  README.md  axiom_documentation.md  axiom_quick_reference.md  axiom_tests.py  axiom_utilities.py  batch_script.txt  enterprise_scraper.bat  file_downloader.py  requirements.txt  setup_and_run.bat
scripts/smoke/: AppLaunchSmokeTest.ps1
src/: version.h
src/app/: main.cpp  rainmgrapp.cpp  rainmgrapp.h
src/config/: config_manager.cpp  config_manager.h  configuration_manager.cpp  configuration_manager.h
src/core/: debug.h  error_handling.h  feature_flags.h  logger.cpp  logger.h  logger_adapter.cpp  logger_adapter.h  privacy_manager.h  security.cpp  security.h  security_adapter.cpp  security_adapter.h  service_locator.cpp  service_locator.h  service_registration.cpp  system_monitor.h
src/crash/: CrashHandler.cpp  CrashHandler.h
src/ipc/: ipc_manager.cpp  ipc_manager.h
src/render/: render_process_launcher.cpp  render_process_launcher.h
src/security/: dll_validator.h
src/services/: telemetry_service.cpp  telemetry_service.h
src/ui/: dashboard_tab.cpp  dashboard_tab.h  options_window.cpp  options_window.h  splash_screen.cpp  splash_screen.h  task_manager_tab.cpp  task_manager_tab.h  ui_framework.cpp  ui_framework.h  ui_prefs.cpp  ui_prefs.h  ui_theme.h  widget_ui_manager.h
src/widgets/: widget_manager.cpp  widget_manager.h
suggested widgets or ideas/: 3d global network.txt  3d orbs.txt  cpuhexagon.txt  datadensity.txt  manager_servicepy.txt  parser.txt  pythondatacollector.txt
suggested widgets or ideas/proposed skins/: HighttechNetwork.txt
tests/: CMakeLists.txt
tests/performance/: performance_memory_tests.cpp
tests/security/: security_tests.cpp
tests/ui/: ui_automation_tests.cpp
tests/unit/: core_tests.cpp  logger_tests.cpp
tools/: PreFlight.ps1
(+58 files in other folders)
